# rl-mpquic

./: .gitignore  CLAUDE.md  README.md  evaluate.py  pyproject.toml  train.py
configs/: calibrated.yaml  default.yaml  dynamic.yaml  dynamic_attn.yaml  dynamic_dr.yaml  dynamic_popart.yaml  four_path.yaml  smoke.yaml
configs/profiles/: interactive.yaml  passive.yaml  presenter.yaml
docs/: ARCHITECTURE.md  IMPLEMENTATION.md  PATCH_TIER1_SAMPLE_EFFICIENCY.md  REWARD_TUNING.md  RL_AGENT_DESIGN.md  ROADMAP.md  SLIDES.md  TUNING_DYNAMICS.md
evaluation/: README.md  generate_figures.py
ns3/: CMakeLists.txt  realtime_mpquic.cc  realtime_mpquic.h  realtime_mpquic_py.cc
scripts/: ab_eval.py  calibrate_reward.py  install_ns3_example.sh  parity_check.py  wedge_repro.py
src/: __init__.py
src/ns3env/: __init__.py  dataplane.py  g1070.py  learned_vmaf.py  qoe.py  qos_vmaf_reward.py  realtime_env.py  reward_model.npz  video_source.py
src/rl/: __init__.py  app_agent.py  path_agent.py  replay_buffer.py  sac_agent.py  scoring_sac_agent.py  transport_agent.py
src/train/: __init__.py  config.py  evaluate.py  hierarchical_train.py
tests/: test_buffer_persistence.py  test_calibrate.py  test_critic_layernorm.py  test_domain_randomization.py  test_dynamics.py  test_env_and_train.py  test_g1070.py  test_mock_dataplane.py  test_per.py  test_popart.py  test_profiles.py  test_qoe.py  test_sac_agent.py  test_scoring_agent.py  test_scoring_attn.py
